--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
 		<meta charset="UTF-8">
-		<title>Odin Recipes</title>
+		<title>Skillet Chicken Pasta</title>
 	</head>
 	<body>
 		<h1>Skillet Chicken Pasta</h1>
+        <img src="../images/pasta.png" alt="finished skillet chicken pasta">
 	</body>
 </html>
