Add link to chicken wings recipe on homepage
Users can access the recipe from homepage

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 	<body>
 		<h1>Odin Recipes</h1>
 		<a href="./recipes/pasta.html">Skillet Chicken Pasta</a>
+		<a href="./recipes/wings.html">Rice Crispy Wings</a>
 	</body>
 </html>
