Add link to sauce recipe page
The recipe is accessible from homepage

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 		<h1>Odin Recipes</h1>
 		<a href="./recipes/pasta.html">Skillet Chicken Pasta</a>
 		<a href="./recipes/wings.html">Rice Crispy Wings</a>
+		<a href="./recipes/sauce.html">Buffalo Chicken Wing Sauce</a>
 	</body>
 </html>
