Add alt text to images
Screen readers won`t read the images to users with disabilities without this information

--- a/recipes/wings.html
+++ b/recipes/wings.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h1>Rice Crispy Wings</h1>
-	<img src="../images/wings.jpg">
+	<img src="../images/wings.jpg" alt="finished Rice Crispy Wings">
 	<h3>Description</h3>
 	<p>The rice flour coating on these wings turned out to be light, crispy, and extremely sauce friendly.</p>
 	<p>You can spice the flour any way you want!</p>
