Add height and width attributes to images
Decreased image size to put more emphasis on the text

--- a/recipes/sauce.html
+++ b/recipes/sauce.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Buffalo Chicken Wing Sauce</h1>
-	<img src="../images/sauce.jpg" alt="finished Buffalo Chicken Wing Sauce">
+	<img src="../images/sauce.jpg" alt="finished Buffalo Chicken Wing Sauce" height="360" width="540">
 	<h3>Description</h3>
 	<p>Everyone needs a good Buffalo sauce recipe in their back pocket. Once you try Chef John's tried-and-true Buffalo sauce (inspired by the original recipe from Buffalo, New York), you'll never go back to the bottled stuff.</p>
 	<h3>Ingredients</h3>
