--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<h1>Skillet Chicken Pasta</h1>
-    <img src="../images/pasta.png" alt="finished skillet chicken pasta">
+    <img src="../images/pasta.png" alt="finished skillet chicken pasta" height="360" width="540">
     <h3>Description</h3>
     <p>This chicken pasta skillet meal is a tasteful combination of vegetables, chicken, and pasta prepared in a cast iron skillet.</p>
     <h3>Ingredients</h3>
