--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 	</head>
 	<body>
 		<h1>Odin Recipes</h1>
-		<a href="./recipes/pasta.html">Skillet Chicken Pasta</a>
-		<a href="./recipes/wings.html">Rice Crispy Wings</a>
-		<a href="./recipes/sauce.html">Buffalo Chicken Wing Sauce</a>
+		<ul>
+			<li><a href="./recipes/pasta.html">Skillet Chicken Pasta</a></li>
+			<li><a href="./recipes/wings.html">Rice Crispy Wings</a></li>
+			<li><a href="./recipes/sauce.html">Buffalo Chicken Wing Sauce</a></li>
+		</ul>
 	</body>
 </html>
