--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<body>
 		<h1>Odin Recipes</h1>
 		<ul>
-			<li><a href="./recipes/pasta.html">Skillet Chicken Pasta</a></li>
-			<li><a href="./recipes/wings.html">Rice Crispy Wings</a></li>
-			<li><a href="./recipes/sauce.html">Buffalo Chicken Wing Sauce</a></li>
+			<li><a href="./recipes/pasta.html" target="_blank">Skillet Chicken Pasta</a></li>
+			<li><a href="./recipes/wings.html" target="_blank">Rice Crispy Wings</a></li>
+			<li><a href="./recipes/sauce.html" target="_blank">Buffalo Chicken Wing Sauce</a></li>
 		</ul>
 	</body>
 </html>
